# workday-application-automation

./: .gitignore  README.md  app.py  pyproject.toml  resume.yml  resume_sample.yml  utils.py  webdrivers_installer.py
